<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Booking Studio</string>
    <string name="nav_header_subtitle">Welcome! the best app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">設置</string>

    <!--PUBLIC-->
    <string name="comfirm1">Comfirm</string>
    <string name="cancel1">Cancel</string>
    <string name="return1">return</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_btn_setting">System Setting</string>
    <string name="menu_home_login">login</string>
    <string name="about_low_button_text">購票</string>


    <string name="lan_chinese">簡體</string>
    <string name="lan_en">英文</string>
    <string name="text_content">這是內容顯示區域</string>
    <string name="select_language">選擇一種語言</string>
    <string name="lan_zh_rTYW">繁体</string>
    <string name="Follow_the_system">跟随系統</string>
    <string name="lan_zh_HK">繁体</string>
    <string name="menu_lang_setting">語言設置</string>
    <string name="about">About</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="action_login_label">Login</string>
    <string name="input_cloud_url">Cloud Url</string>
    <string name="input_cloud_url_tips">Please input the Cloud Url</string>

    <!--home-->
    <string name="prompt_address">地點</string>
</resources>