<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<!--自動導航： android:id必須要與Mobile_Navigation中定義的android:id要一致才能啟用自動導航的.
例如：當前的文檔 android:id="@+id/nav_home" 必須在Mobile_Navigation.xml要一致。
-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_extend_home"
            android:icon="@drawable/ic_menu_camera"
            android:orderInCategory="100"
            android:title="@string/menu_home" >
            <!--Sub menu-->
            <menu android:id="@+id/menu_submenu" >
                <group android:checkableBehavior="single" android:menuCategory="secondary">
                    <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_menu_camera"
                        android:title="@string/menu_home"></item>

                    <item android:id="@+id/nav_home_login" android:title="@string/action_login_label"  android:icon="@drawable/ic_menu_camera" />
                    <item android:id="@+id/nav_about_us" android:title="Ticket Booking"  android:icon="@drawable/ic_menu_camera"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_gallery"
            android:orderInCategory="200"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery">
            <menu>
                <group android:checkableBehavior = "none">
                    <item android:id="@+id/nav_fragment_blue_page" android:title="蓝色" android:icon="@drawable/ic_menu_camera" />
                    <item android:id="@+id/nav_fragment_green_page" android:title="绿色"  android:icon="@drawable/ic_menu_camera" />
                    <item android:id="@+id/nav_maps_fragment" android:title="Google Map"  android:icon="@drawable/ic_menu_camera" />
                    <item android:id="@+id/nav_about"  android:title="@string/about"   android:icon="@drawable/ic_menu_camera" />
                </group>
            </menu>

        </item>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:orderInCategory="300"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_system_setting"
            android:icon="@drawable/ic_menu_camera"
            android:orderInCategory="400"
            android:title="@string/menu_btn_setting" />
    </group>
</menu>