<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_home_login"
        android:name="com.example.myapplication.ui.home.ui.login.LoginFragment"
        android:label="@string/menu_home_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_system_setting"
        android:name="com.example.myapplication.ui.setting.SettingFragment"
        android:label="@string/menu_btn_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.myapplication.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_fragment_blue_page"
        android:name="com.example.myapplication.ui.gallery.BluePageFragment"
        android:label="fragment_blue_page"
        tools:layout="@layout/fragment_blue_page" />
    <fragment
        android:id="@+id/nav_fragment_green_page"
        android:name="com.example.myapplication.ui.gallery.GreenPageFragment"
        android:label="fragment_green_page"
        tools:layout="@layout/fragment_green_page" >

    </fragment>
    <fragment
        android:id="@+id/nav_maps_fragment"
        android:name="com.example.myapplication.ui.home.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />


</navigation>